Fixed footer gap

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,23 @@
-@font-face {
-  font-family: Merriweather;
-  src: url(../fonts/Merriweather/Merriweather-VariableFont_wght.ttf);
-}
+
 
 @font-face {
   font-family: Rubik;
   src: url(../fonts/Rubik/Rubik-VariableFont_wght.ttf);
 }  
+
+@font-face {
+  font-family: Merriweather;
+  src: url(../fonts/Merriweather/Merriweather-VariableFont_opsz\,wdth\,wght.ttf);
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
 body {
   font-family: 'Rubik', sans-serif;
@@ -14,6 +25,4 @@ body {
   font-optical-sizing: auto;
   font-size: clamp(15px, 2vw, 20px);
   line-height: 1.2;
-  margin: 0;
-  padding: 0;
 }
